# go2-rl-sim

./: .gitignore  LICENSE  MUJOCO_LOG.TXT  README  README.md  evaluate_policy.py  go2_env.py  ppo_train.py  requirements.txt
Go2_information/: go2_old.xml
domain_randomization_env_training/: evaluate_policy_dom_rand.py  go2_env_dom_rand.py  ppo_train_dom_rand.py  rewards_dom_rand.py  training_cfgs_dom_rand.py
go2_final_training/: evaluate_policy.py  go2_env.py  ppo_train.py
go2_training/: evaluate_policy.py  go2_env.py  ppo_train.py
go2_training/tensorboard/eval/: events.out.tfevents.1751044905.DESKTOP-TAASGR1.6468.0  events.out.tfevents.1751055045.DESKTOP-TAASGR1.29884.0  events.out.tfevents.1751055266.DESKTOP-TAASGR1.22056.0  events.out.tfevents.1751055413.DESKTOP-TAASGR1.27116.0  events.out.tfevents.1751056166.DESKTOP-TAASGR1.21468.0  events.out.tfevents.1751056188.DESKTOP-TAASGR1.31712.0  events.out.tfevents.1751058888.DESKTOP-TAASGR1.30064.0  events.out.tfevents.1751060061.DESKTOP-TAASGR1.15852.0  (+27 more)
go2_training/vecstats/: ppo_go2_20250707-202439_vecnormalize.pkl
go2_training_tests/: evaluate_policy_test.py  george_code.py  go2_env_test.py  ppo_train_test.py
ros2_sim2real/: low_level_ctrl_edit.cpp  package.xml  policy_transfer.py  setup.cfg  setup.py  sim2real_node.py
single_env_training/: evaluate_policy_single.py  go2_env_single.py  ppo_train_single.py  rewards.py  training_cfgs.py
single_env_training/alt_training/: go2_env_single_alt.py  ppo_train_single_alt.py
vectorized_env_training/: evaluate_policy_vec.py  go2_env_vec.py  ppo_train_vec.py
(+27 files in other folders)
